--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,372 @@
-:root{
-    /* Colors */
-    --primary-color:#CEFE1A;
-    --background-color: #000000;
-    --light-color: #f2f2f2;
-    --text-color: #000000;
+:root {
+  /* Colors */
+  --primary-color: #cefe1a;
+  --background-color: #000000;
+  --light-color: #f2f2f2;
+  --text-color: #8e8e8e;
 }
 
-body{
-    margin:0;
-    padding:0;
-    font-family: 'Poppins', sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--background-color);
+  color: var(--light-color);
+}
+a {
+  text-decoration: none;
+}
+li,
+ul,
+ol {
+  list-style: none;
+}
+
+/* Section Style */
+.about,
+.skills,
+.portafolio,
+.contacto {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 39px 0px;
+}
+.section-title {
+  width: 190px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid var(--primary-color);
+  text-align: center;
+}
+.section-title h1 {
+  margin: 0px;
+  font-size: 35px;
+  font-weight: 700;
+}
+
+/* Header */
+
+header {
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: var(--light-color);
+  height: 70px;
+}
+.header-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header-logo img {
+  width: 36px;
+}
+.header-logo h1 {
+  font-size: 16px;
+  font-weight: 500;
+  margin-left: 10px;
+}
+.header-menu ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--light-color);
+  flex-wrap: wrap;
+}
+
+.header-menu li {
+  margin-right: 15px;
+}
+.header-menu li:nth-child(6) {
+  margin-right: 0px;
+}
+.header-menu a {
+  color: var(--light-color);
+}
+.header-menu a:hover {
+  color: var(--primary-color);
+}
+
+/* ------Final Header------ */
+
+/* Main */
+
+main {
+  height: 100vh;
+  background-image: url(../Assets/jpg/background-image.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.main-photo {
+  margin-right: 41px;
+}
+.main-photo img {
+  width: 250px;
+  height: 250px;
+  border-radius: 150px;
+  position: relative;
+}
+.main-description {
+  position: relative;
+  text-align: center;
+}
+
+.main-description h3,
+.main-description h2 {
+  color: var(--light-color);
+  font-size: 45px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.main-description h1 {
+  color: var(--primary-color);
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0;
+}
+
+/* ------Final Main------ */
+
+/* about */
+
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 74px;
+}
+.about-description {
+  width: 562px;
+  text-align: justify;
+  margin-right: 85px;
+}
+.about-description h5 {
+  font-size: 19px;
+  font-weight: 700;
+  color: var(--text-color);
+}
+.about-description h1 {
+  font-size: 35px;
+  font-weight: 700;
+}
+.about-description p {
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--text-color);
+}
+.about-description button {
+  background-color: var(--primary-color);
+  padding: 13px 16px;
+  color: var(--background-color);
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+}
+.about-description i {
+  margin-right: 5px;
+}
+.about-description button:hover {
+  color: var(--primary-color);
+  background-color: var(--background-color);
+}
+
+/* ------Final About------ */
+
+/* Skills */
+
+.skills-container {
+  margin-top:103px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-column-gap: 110px;
+  grid-row-gap: 0px;
+}
+
+.dev {
+  grid-area: 1 / 1;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+  
+}
+
+.design {
+  grid-area: 1 / 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+}
+
+.tools {
+  grid-area: 1 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+}
+.item{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+}
+
+.item h3{
+    font-size:16px;
+    font-weight:400;
+    text-transform: uppercase;
+}
+
+/* ------Final skills------ */
+
+/* Portafolio */
+
+.portafolio p{
+    font-weight: 500;
+    font-size: 16px;
+    color: var(--text-color);
+    text-align: center;
+}
+
+.portafolio-menu{
+    margin-top: 50px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+.portafolio-menu a{
+    font-weight:500;
+    font-size: 16px;
+    color: var(--text-color);
+    text-align: center;
+    margin-right: 80px;
+    padding-bottom: 4px;
+    border-bottom: 2px solid var(--primary-color);
+    text-align: center;
+}
+.portafolio-menu a:nth-child(3){
+    margin-right: 0px;
+    border: none;
+}
+.portafolio-menu a:nth-child(2){
+    border: none;
+}
+
+.portafolio-proyectos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap:20px;
+    grid-row-gap: 20px;
+    margin-top: 46px;
+}
+
+.item-portafolio{
+    width: 400px;
+    height:273px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border: 3px solid var(--primary-color);
+    
+}
+.item-portafolio:hover{
+    border: 3px solid var(--light-color);
+    
+}
+.item-portafolio:nth-child(1){
+    background-image: url(/Assets/png/projectsImages/1.png);
+}
+.item-portafolio:nth-child(2){
+    background-image: url(/Assets/png/projectsImages/2.png);
+}
+.item-portafolio:nth-child(3){
+    background-image: url(/Assets/png/projectsImages/3.png);
+}
+.item-portafolio:nth-child(4){
+    background-image: url(/Assets/png/projectsImages/4.png);
+}
+.item-portafolio:nth-child(5){
+    background-image: url(/Assets/png/projectsImages/5.png);
+}
+.item-portafolio:nth-child(6){
+    background-image: url(/Assets/png/projectsImages/6.png);
+}
+
+/* ------Final portafolio------ */
+
+/* Contacto */
+
+.contacto-botones{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.contacto-botones a{
+    margin-top:48px;
+    background-color: #191919;
+    color:var(--light-color);
+    width: 200px;
+    padding: 30px 0px 15px;
+    margin-right:100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.contacto-botones a:last-child{
+    margin-right:0;
+}
+.contacto-botones a:hover{
+    color: var(--primary-color);
+}
+.contacto-botones i{
+    font-size: 50px;
+}
+.contacto-botones h4{
+    font-weight: 400;
+    font-size: 16px;
+}
+
+footer{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    padding: 10px 0px;
+    border-top: 1px solid var(--light-color)
+}
+footer h1{
+    font-weight: bold;
+    font-size: 16px;
+}
+footer a{
+    color: var(--primary-color);
 }
