--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -64,3 +64,162 @@
         padding: 20px 0px 10px;
     }
 }
+
+@media screen and (max-width:770px){
+     /* Hamburguer Menu */
+    .close, .hamburger{
+        display: initial;
+    }
+    .hamburger, .close {
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 36px;
+        height: 36px;
+      }
+      
+      .hamburger {
+        background: white;
+      }
+      
+      .close {
+        background: black;
+      }
+      
+      .hamburger img, .close img {
+        width: 100%;
+        height: 100%;
+      }
+      
+      .navbar {
+        position: absolute;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        list-style: none;
+        background: black;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+        transform: translateY(-100%);
+        transition: transform 0.2s ease;
+      }
+      
+      .navbar:target {
+        transform: translateY(0);
+      }
+      
+      li a {
+        display: block;
+        font-family: 'Open Sans', sans-serif;
+        color: white;
+        font-weight: bold;
+        font-size: 1.2rem;
+        text-decoration: none;
+        border-bottom: 1px solid black;
+        padding-bottom: 0.5rem;
+      }
+      
+      li a:hover, li a:focus {
+        border-bottom: 1px solid white;
+      }
+      /* ----Final Hamburguer---- */
+
+      header{
+          justify-content:center;
+      }
+      main{
+          background-image: url('../Assets/jpg/bk-mobile.jpg');
+            flex-direction: column;
+    }
+    .main-photo{
+        margin: 0px;
+    }
+      .about-container{
+          flex-direction: column-reverse;
+      }
+      iframe{
+        width: 350px !important;
+        height: 315px !important;
+      }
+    .about-description{
+        width:auto;
+        margin: 20px 0px 0px;
+        padding: 0px 20px;
+        text-align: center;
+    }
+    .about-description h1{
+        text-align: center;
+    }
+    .skills-container {
+        margin-top:103px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 70px;
+      }
+      .dev {
+        grid-area: 1 / 1;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 25px;
+        grid-row-gap: 25px;
+        
+      }
+      .design {
+        grid-area: 2 / 1;
+      }
+      .tools{
+        grid-area: 3 / 1;
+      }
+      .portafolio p{
+          font-size:10px;
+      }
+      .portafolio-proyectos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap:20px;
+        grid-row-gap: 20px;
+        margin-top: 46px;
+      }
+      .contacto-botones{
+          flex-direction: column;
+      }
+      .contacto-botones a{
+          margin: 10px 0px;
+      }
+    
+      
+}
+@media screen and (max-width: 430px){
+    .main-description h3, .main-description h2{
+        font-size:20px;
+    }
+    .main-description h1{
+        font-size:30px;
+    }
+    .portafolio-proyectos{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-column-gap:0px;
+        grid-row-gap: 20px;
+        margin-top: 46px;
+      }
+      .portafolio-menu a{
+        margin-right: 30px;
+      }
+      iframe{
+        width: 300px !important;
+        height: 215px !important;
+      }
+}
